--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 1480px;
     width: 86%;
     height: 80%;
     margin: 0 auto;
